--- a/package.json
+++ b/package.json
@@ -1,32 +1,32 @@
 {
-  "name": "biojs-vis-scatter-plot",
-  "description": "BioJS component to provide a scatter plot graph hosted in Stemformatics",
+  "name": "biojs-vis-violin-plot",
+  "description": "BioJS component to provide a violin plot graph hosted in Stemformatics",
   "version": "0.0.2",
-  "homepage": "https://github.com/ArianeMora/bio-js-scatter-plot",
+  "homepage": "https://github.com/ArianeMora/bio-js-violin-plot",
   "author": {
     "name": "ArianeMora",
     "email": "ariane.mora@uq.net.au"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ArianeMora/bio-js-scatter-plot.git"
+    "url": "https://github.com/ArianeMora/bio-js-violin-plot.git"
   },
   "bugs": {
-    "url": "https://github.com/ArianeMora/bio-js-scatter-plot/issues"
+    "url": "https://github.com/ArianeMora/bio-js-violin-plot/issues"
   },
   "licenses": [
     {
       "type": "Apache 2",
-      "url": "https://github.com/ArianeMora/bio-js-scatter-plot/blob/master/LICENSE"
+      "url": "https://github.com/ArianeMora/bio-js-violin-plot/blob/master/LICENSE"
     }
   ],
   "main": "lib/index.js",
   "scripts": {
 		"test": "echo 'Error: no test specified' && exit 1",
-		"build": "mkdirp build && browserify -r ./:biojs-vis-scatter-plot -o build/test.js",
+		"build": "mkdirp build && browserify -r ./:biojs-vis-violin-plot -o build/test.js",
 		"build-browser": "npm run build",
 		"install": "npm run build",
-		"watch": "watchify -r ./:biojs-vis-scatter-plot -v -o build/test.js",
+		"watch": "watchify -r ./:biojs-vis-violin-plot -v -o build/test.js",
 		"w": "prunner \"npm run sniper\" \"npm run watch\"",
 		"sniper": "sniper ."
   },
@@ -45,7 +45,7 @@
         "https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.6.3/d3-tip.min.js",
         "https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"
     ],
-    "css":["/css/biojs-vis-scatter-plot.css"],
+    "css":["/css/biojs-vis-violin-plot.css"],
     "snippets": ["examples"],
     "first": "simple"
    }, 
